safer to use than AES-GCM. They can also be used as high-performance MACs.
 - The HKDF key derivation mechanism, required by many standard protocols, is
now available in the `crypto_kdf_hkdf_*()` namespace. It is implemented for
the SHA-256 and SHA-512 hash functions.
 - The `osx.sh` build script was renamed to `macos.sh`.

* Version 1.0.18-stable
 - Visual Studio: support for Windows/ARM64 builds has been added.
 - Visual Studio: AVX512 implementations are enabled on supported CPUs.
 - Visual Studio: an MSVC 2022 solution was added.
 - Apple XCFramework: support for VisionOS was added.
 - Apple XCFranework: support for Catalyst was added.
 - Apple XCFramework: building the simulators is now optional.
 - iOS: bitcode is not generated any more, as it was deprecated by Apple.
 - watchOS: support for arm64 was added.
 - The Zig toolchain can now be used as a modern build system to replace
autoconf/automake/libtool/make/ccache and the compiler. This enables faster
compilation times, easier cross compilation, and static libraries optimized
for any CPU.
 - The Zig toolchain is now the recommended way to compile `libsodium`
to WebAssembly/WASI(X).
 - libsodium can now be added as a dependency to Zig projects.
 - Memory fences were added to remove some gadgets that could be used
alongside speculative loads.
 - The AES-GCM implementation was completely rewritten. It is now faster,
and also available on aarch64, including Windows/ARM64.
 - Compatibility with CET instrumentation / IBT / Shadow Stack was added.
 - Emscripten: the `crypto_pwhash_*()` functions have been removed from Sumo
builds, as they reserve a substantial amount of JavaScript memory, even when
not used.
 - Benchmarks now use `CLOCK_MONOTONIC` if possible.
 - WebAssembly: tests can now run using Bun, WasmEdge, Wazero, wasm3 and
wasmer-js. Support for WAVM and Lucet have been removed, as these projects
have reached EOL.
 - .NET: the minimum supported macOS version is now 1.0.15; this matches